--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,10 @@
         "@angular/platform-browser": "^18.0.0",
         "@angular/platform-browser-dynamic": "^18.0.0",
         "@angular/router": "^18.0.0",
-        "@ngrx/store": "^18.0.1",
         "@ngrx/component": "^18.0.1",
         "@ngrx/effects": "^18.0.1",
+        "@ngrx/store": "^18.0.1",
+        "crypto-js": "^4.2.0",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.3"
@@ -31,6 +32,7 @@
         "@angular-devkit/build-angular": "^18.0.3",
         "@angular/cli": "^18.0.3",
         "@angular/compiler-cli": "^18.0.0",
+        "@types/crypto-js": "^4.2.2",
         "@types/jasmine": "~5.1.0",
         "jasmine-core": "~5.1.0",
         "karma": "~6.4.0",
