--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "@ngrx/effects": "^18.0.1",
         "@ngrx/store": "^18.0.1",
         "crypto-js": "^4.2.0",
+        "ngx-mask": "^17.1.8",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.3"
