--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
         "@ngrx/effects": "^18.0.1",
         "@ngrx/store": "^18.0.1",
         "crypto-js": "^4.2.0",
+        "date-fns": "^3.6.0",
+        "ng2-currency-mask": "^13.0.3",
         "ngx-mask": "^17.1.8",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
